--- a/css/style.css
+++ b/css/style.css
@@ -2952,5 +2952,8 @@ a {
   background-color: #255BFE;
   color: #000;
   border-radius: 3px;
+  margin: 0;
+  padding: 0;
+  /* width: 150px; */
   
 }
