--- a/css/style.css
+++ b/css/style.css
@@ -2069,7 +2069,7 @@ body:after {
 }
 
 .social-media {
-  display: inline-block;
+  /* display: inline-block; */
   float: left;
   margin-bottom: 0px;
   padding: 0;
