--- a/css/form.css
+++ b/css/form.css
@@ -60,7 +60,7 @@ body {
 .login-box .user-box input:valid~label {
     top: -20px;
     left: 0;
-    color: #03e9f4;
+    color: #0F3877;
     font-size: 12px;
 }
 
@@ -68,7 +68,7 @@ body {
     position: relative;
     display: inline-block;
     padding: 10px 20px;
-    color: #03e9f4;
+    color: #0F3877;
     font-size: 16px;
     text-decoration: none;
     text-transform: uppercase;
@@ -79,13 +79,13 @@ body {
 }
 
 .login-box a:hover {
-    background: #03e9f4;
+    background: #0F3877;
     color: #fff;
     border-radius: 5px;
-    box-shadow: 0 0 5px #03e9f4,
-        0 0 25px #03e9f4,
-        0 0 50px #03e9f4,
-        0 0 100px #03e9f4;
+    box-shadow: 0 0 5px #0F3877,
+        0 0 25px #0F3877,
+        0 0 50px #0F3877,
+        0 0 100px #0F3877;
 }
 
 .login-box a span {
@@ -98,7 +98,7 @@ body {
     left: -100%;
     width: 100%;
     height: 2px;
-    background: linear-gradient(90deg, transparent, #03e9f4);
+    background: linear-gradient(90deg, transparent, #0F3877);
     animation: btn-anim1 1s linear infinite;
 }
 
@@ -160,7 +160,7 @@ body {
     left: 0;
     width: 2px;
     height: 100%;
-    background: linear-gradient(360deg, transparent, #03e9f4);
+    background: linear-gradient(360deg, transparent, #0F3877);
     animation: btn-anim4 1s linear infinite;
     animation-delay: .75s
 }
